<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myPrimaryColor"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_pure" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_actionbar"
        android:background="@color/myWindowBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/user_avatar"
                android:layout_height="132dp"
                android:layout_width="132dp"
                android:src="@drawable/ic_noavatar"
                android:scaleType="fitXY"
                app:riv_corner_radius="24dp"
                app:riv_border_width="2dp"
                app:riv_border_color="@color/default_white"
                app:riv_mutate_background="true"
                app:riv_oval="true"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_marginTop="32dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TableLayout
                android:id="@+id/userinfo_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/user_avatar">

                <TableRow>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:text="@string/userinfo_username"/>

                    <TextView
                        android:id="@+id/username"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/na"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:text="@string/userinfo_nickyname"/>

                    <TextView
                        android:id="@+id/nickname"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/na"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:text="@string/userinfo_score"/>

                    <TextView
                        android:id="@+id/score"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/na"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:text="@string/userinfo_experience"/>

                    <TextView
                        android:id="@+id/experience"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/na"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="8dp">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_gravity="right"
                        android:text="@string/userinfo_rank"/>

                    <TextView
                        android:id="@+id/rank"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/na"/>
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userinfo_table"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/novel_item_white"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:cardMaxElevation="2dp">

                    <TextView
                        android:id="@+id/btn_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:background="@drawable/btn_menu_item"
                        android:text="@string/login_logout"
                        android:singleLine="true"
                        android:clickable="true"
                        android:textColor="@color/login_btn_dark" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>