<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/startbg_default"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/wenku8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:text="轻小说文库 | Wenku8.cn"/>

            <!--<ImageView-->
                <!--android:layout_width="132dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/ic_wenku8_logo"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginTop="32dp" />-->

            <!--<ImageView-->
                <!--android:layout_width="80dp"-->
                <!--android:layout_height="80dp"-->
                <!--android:src="@drawable/ic_launcher"-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_centerHorizontal="true" />-->

            <TextView
                android:id="@+id/version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wenku8"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/na"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/copyright_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginBottom="16dp" >

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="14sp"
                android:text="- Copyright -"/>

            <TableLayout
                android:id="@+id/copyright_table"
                android:layout_below="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow>
                    <TextView
                        android:id="@+id/architect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/app_architect_text"/>

                    <TextView
                        android:id="@+id/mewx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/app_architect"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/ui_designer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/app_ui_designer_text"/>

                    <TextView
                        android:id="@+id/zero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/app_ui_designer"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>